Add Registration API example for Machine Learning resource type

--- a/demoroot/notebooks/07 Resource Registration API.ipynb
+++ b/demoroot/notebooks/07 Resource Registration API.ipynb
@@ -28,7 +28,8 @@
    "outputs": [],
    "source": [
     "base_domain = \"develop.eoepca.org\"\n",
-    "registration_endpoint = f'https://registration-api.{base_domain}'"
+    "registration_endpoint = f'https://registration-api.{base_domain}'\n",
+    "base_domain = \"apx.develop.eoepca.org\""
    ]
   },
   {
@@ -63,7 +64,7 @@
     "          \"rel\": \"item\"\n",
     "        },\n",
     "        \"target\": {\n",
-    "          \"href\": \"https://resource-catalogue.develop.eoepca.org\",\n",
+    "          \"href\": \"https://resource-catalogue.apx.develop.eoepca.org\",\n",
     "          \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
     "        }\n",
     "    }\n",
@@ -127,7 +128,7 @@
     "        \"collection\": \"metadata:main\",\n",
     "        \"rel\": \"item\",\n",
     "        \"target\": {\n",
-    "            \"href\": \"https://resource-catalogue.develop.eoepca.org\",\n",
+    "            \"href\": \"https://resource-catalogue.apx.develop.eoepca.org\",\n",
     "            \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
     "        }\n",
     "    }\n",
@@ -391,7 +392,7 @@
     "        \"id\": \"worldcereal_inference\",\n",
     "        \"rel\": \"item\",\n",
     "        \"target\": {\n",
-    "            \"href\": \"https://resource-catalogue.develop.eoepca.org\",\n",
+    "            \"href\": \"https://resource-catalogue.apx.develop.eoepca.org\",\n",
     "            \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
     "        }\n",
     "    }\n",
@@ -430,6 +431,136 @@
    "source": [
     "time.sleep(1)\n",
     "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/worldcereal_inference\", headers=dict(f=\"json\"))\n",
+    "#response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d5f4f3-39ee-4c6b-814f-36d428af8751",
+   "metadata": {},
+   "source": [
+    "We will now register a Record representing a Machine Learning resource through Registration API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f3bd60b-67b9-4892-9365-e7c7bb6cf77c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_dict={\n",
+    "    \"inputs\": {\n",
+    "        \"source\": {\n",
+    "          \"href\": \"https://github.com/stac-extensions/mlm/raw/refs/heads/main/examples/item_basic.json\",\n",
+    "          \"rel\": \"item\"\n",
+    "        },\n",
+    "        \"target\": {\n",
+    "          \"href\": \"https://resource-catalogue.apx.develop.eoepca.org\",\n",
+    "          \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fae10fb-13de-4e20-b0f5-11defa7e1e03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/register/execution\",\n",
+    "    json=json_dict\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee85bfc0-f3d2-420b-bbd2-23b1edb4232d",
+   "metadata": {},
+   "source": [
+    "Check if the STAC Item is actually registered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f31be8cd-1bba-438c-972b-60d92d1a4f2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(1)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/example-model\", headers=dict(f=\"json\"))\n",
+    "# \"https://resource-catalogue.apx.develop.eoepca.org/collections/metadata:main/items/example-model\"\n",
+    "response.raise_for_status()\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a380b4b1-f240-460e-abae-014fc8b73f79",
+   "metadata": {},
+   "source": [
+    "We will now unregister the STAC Item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f71802b8-c8c3-4d2d-8819-fb9d5c48003d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_dict={\n",
+    "    \"inputs\": {\n",
+    "        \"id\": \"example-model\",\n",
+    "        \"collection\": \"metadata:main\",\n",
+    "        \"rel\": \"item\",\n",
+    "        \"target\": {\n",
+    "            \"href\": \"https://resource-catalogue.apx.develop.eoepca.org\",\n",
+    "            \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9938a59f-1e79-4067-bca1-42d6b04c2fae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post(\n",
+    "    f\"{registration_endpoint}/processes/deregister/execution\",\n",
+    "    json=json_dict\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "662a8e98-6c33-4d5d-87b8-fc19dda74f9b",
+   "metadata": {},
+   "source": [
+    "Check if the STAC Item is actually unregistered:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1803698-3ec2-4019-afc2-48b065fb348b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(1)\n",
+    "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/example-model\", headers=dict(f=\"json\"))\n",
     "#response.raise_for_status()\n",
     "response.json()"
    ]
