Update registration api url

--- a/demoroot/notebooks/07 Resource Registration API.ipynb
+++ b/demoroot/notebooks/07 Resource Registration API.ipynb
@@ -27,9 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"develop.eoepca.org\"\n",
-    "registration_endpoint = f'https://registration-api.{base_domain}'\n",
-    "base_domain = \"apx.develop.eoepca.org\""
+    "base_domain = \"apx.develop.eoepca.org\"\n",
+    "registration_endpoint = f'https://registration-api.{base_domain}'"
    ]
   },
   {
@@ -309,7 +308,7 @@
     "        \"rel\": \"item\"\n",
     "    },\n",
     "    \"target\": {\n",
-    "        \"href\": \"https://resource-catalogue.develop.eoepca.org/\",\n",
+    "        \"href\": \"https://resource-catalogue.apx.develop.eoepca.org/\",\n",
     "        \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
     "    }\n",
     "  }\n",
