final demo q5 run

--- a/demoroot/notebooks/08 Use Case External Data Registration.ipynb
+++ b/demoroot/notebooks/08 Use Case External Data Registration.ipynb
@@ -78,19 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3f92f141-b1a5-4080-9158-635bcdaf2f77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set SSL-Cert-Path via Env Var\n",
+    "# Handle Geoservice Certificates - et SSL-Cert-Path via Env Var\n",
     "os.environ['REQUESTS_CA_BUNDLE'] = certifi.where()\n",
     "os.environ['CURL_CA_BUNDLE'] = certifi.where()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "53ad9166-1d87-4d16-826a-ab2a75a2780d",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3a0270ee-2f1c-4e76-a003-23edbc21b9dd",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fa2eecd1-fde8-416e-b68d-c869fa20e7bc",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a1103bb7-f4b8-41f8-9a25-cc8cdfe70e45",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0cc8cd19-bcd9-457f-9307-b701af81f459",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "dcf5af52-d4d2-42a9-8e92-05e1b245d1e7",
    "metadata": {},
    "outputs": [],
@@ -174,17 +174,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4be6c4aa-3b35-44df-b57d-9a628e9fb149",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.08 s, sys: 717 ms, total: 4.8 s\n",
+      "Wall time: 49.7 s\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x147ede9a3890>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x14b908081d90>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -208,6 +216,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "monthly_mean_cf.plot(col=\"month\",\n",
     "    col_wrap=3,\n",
     "    cmap=\"viridis\",\n",
@@ -235,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "099f9fe2-a5c0-4506-aa27-32b84792fc0f",
    "metadata": {},
    "outputs": [
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e0a4f475-79b5-4869-86ba-a1688d22f684",
    "metadata": {},
    "outputs": [
@@ -271,7 +280,7 @@
        " 'https://stac-extensions.github.io/scientific/v1.0.0/schema.json']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,8 +298,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86d55462-5176-4f54-82a2-4347387e10be",
+   "metadata": {},
+   "source": [
+    "Set a local folder for saving and name of the catalog."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "7fd43422-6a51-4cea-a6b4-340c9971db5f",
    "metadata": {},
    "outputs": [],
@@ -299,8 +316,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a58aa96-550d-45a2-b018-e82faabbe078",
+   "metadata": {},
+   "source": [
+    "Adapt the collection information to meet best practices and the selection extents."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "e8ebe87c-9f27-4452-bfb3-745178393737",
    "metadata": {},
    "outputs": [
@@ -310,15 +335,11 @@
      "text": [
       "2023-08-01T12:12:32.291500000\n",
       "2023-12-31T10:50:06.376000000\n",
-      "[-9.95, 35.050000000000004, 29.950000000000006, 69.95]\n",
-      "Number of items: 153\n"
+      "[-9.95, 35.050000000000004, 29.950000000000006, 69.95]\n"
      ]
     }
    ],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
     "# copy raw items\n",
     "source_items = items # list(search.items())\n",
     "\n",
@@ -375,19 +396,198 @@
     "        \"type\": \"temporal\",\n",
     "        \"extent\": [str(ds.time.values[0]), str(ds.time.values[-1])]\n",
     "    }\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b076a28-9ee5-4717-92f5-e297873d81aa",
+   "metadata": {},
+   "source": [
+    "Create the catalog (needed to build the STAC structure correctly)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bd606375-8ad7-48c5-92dc-3bc52c5e2e02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "\n",
+       "<style>\n",
+       ".pystac-summary {\n",
+       "    cursor: pointer;\n",
+       "    display: list-item;\n",
+       "    list-style: revert;\n",
+       "    margin-bottom: 0 !important;\n",
+       "\n",
+       "    .pystac-l {\n",
+       "        padding-left: 0.5em;\n",
+       "        color: rgb(64, 128, 128);\n",
+       "        font-style: italic;\n",
+       "    }\n",
+       "}\n",
+       ".pystac-row {\n",
+       "    overflow-wrap: break-word;\n",
+       "    padding-left: .825em;\n",
+       "\n",
+       "    .pystac-k {\n",
+       "        display: inline-block;\n",
+       "        margin: 0px 0.5em 0px 0px;\n",
+       "    }\n",
+       "    .pystac-v {\n",
+       "        color: rgb(186, 33, 33);\n",
+       "    }\n",
+       "}\n",
+       ".pystac-k {\n",
+       "    color: rgb(0, 128, 0);\n",
+       "    font-weight: 700;\n",
+       "}\n",
+       "</style>\n",
+       "<div class=\"jp-RenderedJSON jp-mod-trusted jp-OutputArea-output\">\n",
+       "    <div class=\"container\" style=\"line-height: normal;\">\n",
+       "        <ul style=\"padding: 0px; margin: 0px; list-style: none; display: block;\">\n",
+       "            \n",
+       "                \n",
+       "                    \n",
+       "        <li class=\"pystac-row\">\n",
+       "            <span class=\"pystac-k\">type</span>\n",
+       "            <span class=\"pystac-v\">\"Catalog\"</span>\n",
+       "        </li>\n",
+       "    \n",
+       "                \n",
+       "            \n",
+       "                \n",
+       "                    \n",
+       "        <li class=\"pystac-row\">\n",
+       "            <span class=\"pystac-k\">id</span>\n",
+       "            <span class=\"pystac-v\">\"s5p-bp-stac-catalog\"</span>\n",
+       "        </li>\n",
+       "    \n",
+       "                \n",
+       "            \n",
+       "                \n",
+       "                    \n",
+       "        <li class=\"pystac-row\">\n",
+       "            <span class=\"pystac-k\">stac_version</span>\n",
+       "            <span class=\"pystac-v\">\"1.1.0\"</span>\n",
+       "        </li>\n",
+       "    \n",
+       "                \n",
+       "            \n",
+       "                \n",
+       "                    \n",
+       "        <li class=\"pystac-row\">\n",
+       "            <span class=\"pystac-k\">description</span>\n",
+       "            <span class=\"pystac-v\">\"Root catalog\"</span>\n",
+       "        </li>\n",
+       "    \n",
+       "                \n",
+       "            \n",
+       "                \n",
+       "                    <li><details>\n",
+       "        <summary class=\"pystac-summary\"><span class=\"pystac-k\">links</span><span class=\"pystac-l\">[] 1 items</span></summary>\n",
+       "        \n",
+       "            <ul style=\"margin: 0px; padding: 0px 0px 0px 1.75em; list-style: none; display: block;\">\n",
+       "        \n",
+       "            \n",
+       "                \n",
+       "        <li><details>\n",
+       "            <summary class=\"pystac-summary\"><span class=\"pystac-k\">0</span></summary>\n",
+       "            <ul style=\"margin: 0px; padding: 0px 0px 0px 1.75em; list-style: none; display: block;\">\n",
+       "        \n",
+       "            \n",
+       "                \n",
+       "        <li class=\"pystac-row\">\n",
+       "            <span class=\"pystac-k\">rel</span>\n",
+       "            <span class=\"pystac-v\">\"child\"</span>\n",
+       "        </li>\n",
+       "    \n",
+       "            \n",
+       "        \n",
+       "            \n",
+       "                \n",
+       "        <li class=\"pystac-row\">\n",
+       "            <span class=\"pystac-k\">href</span>\n",
+       "            <span class=\"pystac-v\">None</span>\n",
+       "        </li>\n",
+       "    \n",
+       "            \n",
+       "        \n",
+       "            \n",
+       "                \n",
+       "        <li class=\"pystac-row\">\n",
+       "            <span class=\"pystac-k\">type</span>\n",
+       "            <span class=\"pystac-v\">\"application/json\"</span>\n",
+       "        </li>\n",
+       "    \n",
+       "            \n",
+       "        \n",
+       "    </ul>\n",
+       "        </details></li>\n",
+       "    \n",
+       "            \n",
+       "        \n",
+       "    </ul>\n",
+       "        \n",
+       "    </details></li>\n",
+       "                \n",
+       "            \n",
+       "        </ul>\n",
+       "    </div>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<Catalog id=s5p-bp-stac-catalog>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# create catalog\n",
     "catalog = Catalog(id=local_folder, description=\"Root catalog\")\n",
     "catalog.add_child(collection)\n",
-    "\n",
-    "\n",
-    "# loop through items and adapt to bp and add to collections\n",
-    "# TO DO: \n",
-    "# Seems that version of Juray doesn't keep these links\n",
+    "catalog"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32b12484-eac3-4ae0-8387-c823fca82615",
+   "metadata": {},
+   "source": [
+    "Adapt items to best practices and chosen extents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3e4be48e-c53d-4793-b21f-653f81161f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of items: 153\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The original metadata contained some invalid STAC according to the harvester.\n",
     "# - item.properties.instruments has to be array, add []\n",
     "# - link mit title=\"OpenSearch Atom XML\" entfernen aufgrund nicht unterstütztem type=\"application/atom+xml\"\n",
     "# - link mit title=\"OpenSearch O&M XML\" entfernen aufgrund nicht unterstütztem type=\"application/gml+xml\"\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "for i, src_item in enumerate(source_items):\n",
     "    t = ds['time'].values[i]\n",
     "    timestamp = np.datetime_as_string(t, 's')\n",
@@ -514,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "0a02a6e8-c415-4672-af59-14a4955510de",
    "metadata": {},
    "outputs": [
@@ -541,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "33ba5d14-d1e2-4c1b-8e8a-a4b48275de45",
    "metadata": {},
    "outputs": [
@@ -551,7 +751,7 @@
        "['https://schemas.stacspec.org/v1.1.0/catalog-spec/json-schema/catalog.json']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +763,6 @@
     "#print(\"Collection Extensions:\", collection.stac_extensions)\n",
     "#print(\"Collection Metadata keys:\", collection.extra_fields.keys())\n",
     "#print(\"Collection valid:\", collection.validate())\n",
-    "\n",
     "\n",
     "#for item in collection.get_all_items():\n",
     "#    print(\"\\nItem ID:\", item.id)\n",
@@ -594,8 +793,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a6c0c0d-7118-41fe-83d5-7fe14d26f692",
+   "metadata": {},
+   "source": [
+    "Definitions for workspace"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "636118a4-05c8-4894-ac6d-43c64fa42957",
    "metadata": {},
    "outputs": [],
@@ -615,8 +822,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd753fd2-1ee1-4b98-85b4-fb54a1eac983",
+   "metadata": {},
+   "source": [
+    "Define functions to interact with workspace."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "f0d2a416-77fd-446b-b04a-dd6b39e35244",
    "metadata": {},
    "outputs": [],
@@ -655,8 +870,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f57e3bd-b0d4-4014-83ce-afe84429ac2e",
+   "metadata": {},
+   "source": [
+    "Prepare workspace"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "21a00fee-a4a6-41d6-84fc-af4bd89212b6",
    "metadata": {},
    "outputs": [
@@ -687,6 +910,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cff79a6c-80e8-42b8-981d-b949c51eae63",
+   "metadata": {},
+   "source": [
+    "Retrieve relevant information sor storage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "78dc928c-c9eb-4181-a0c4-67a0ae35fca3",
@@ -698,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "63cd822c-9108-4197-8200-c39379ac2f75",
    "metadata": {},
    "outputs": [
@@ -721,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "5c55b294-8068-40ff-9301-f735be14a4d2",
    "metadata": {},
    "outputs": [],
@@ -733,8 +964,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "351227a6-8128-4a48-9048-e323a1d7e2c9",
+   "metadata": {},
+   "source": [
+    "Connect to s3."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "88823b9a-b40c-4dc6-9bc1-5c02813e530e",
    "metadata": {},
    "outputs": [],
@@ -745,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "5dd03d55-d799-4774-85b8-7ded8d575111",
    "metadata": {},
    "outputs": [],
@@ -754,8 +993,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc6f84a5-9833-402d-a638-7ffe155ea5df",
+   "metadata": {},
+   "source": [
+    "Recursively upload all files (the catalog, collection and items)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "d7348d0f-42ca-4a1a-89cb-6d895a1e2da1",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1327,6 @@
     }
    ],
    "source": [
-    "# Recursively upload all files\n",
     "for root, dirs, files in os.walk(local_folder):\n",
     "    for file in files:\n",
     "        local_path = os.path.join(root, file)\n",
@@ -1102,13 +1348,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f56067fb-f3d0-43bc-8e95-eceef8e24932",
+   "cell_type": "markdown",
+   "id": "4c9b6041-07a5-480e-9449-dd08206b7de0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#check that files are available here: https://ws-eric.apx.develop.eoepca.org/files/ws-eric/end2end/"
+    "Check that files are available here: https://ws-eric.apx.develop.eoepca.org/files/ws-eric/end2end/"
    ]
   },
   {
@@ -3524,27 +3768,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "bfb690c0-c1ac-402a-be22-720792dd6084",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "no2_data = load_no2_from_items(items_no2, token)\n",
     "\n",
