--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# base_domain = \"192-168-49-2.nip.io\"\n",
-    "base_domain = \"apx.develop.eoepca.org\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
     "workspaces_endpoint = f'https://workspace-api.{base_domain}/workspaces'\n",
     "workspace_prefix = \"ws\""
    ]
@@ -1796,7 +1796,7 @@
    "outputs": [],
    "source": [
     "record_data = '../data/sample-record.json'\n",
-    "base_domain = \"apx.develop.eoepca.org\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'\n",
     "collection_id = 'metadata:main'"
    ]
@@ -2154,7 +2154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"apx.develop.eoepca.org\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}/stac'"
    ]
   },
@@ -2443,7 +2443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"apx.develop.eoepca.org\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
     "system_stac_endpoint = f'https://resource-catalogue.{base_domain}/stac'"
    ]
   },
@@ -2908,7 +2908,7 @@
    "outputs": [],
    "source": [
     "record_data = '../data/ESACCI-LC-L4-LCCS-Map-300m-P1Y-2009-v2.0.7cds.json'\n",
-    "base_domain = \"apx.develop.eoepca.org\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'\n",
     "collection_id = 'metadata:main'"
    ]
