Update Registration Harvester notebook

--- a/demoroot/notebooks/06 Resource Registration Harvester.ipynb
+++ b/demoroot/notebooks/06 Resource Registration Harvester.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "11cd1a65",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,18 @@
     "import json\n",
     "import requests\n",
     "import os\n",
+    "from urllib3.exceptions import InsecureRequestWarning\n",
+    "\n",
+    "# Suppress the warnings from urllib3\n",
+    "requests.packages.urllib3.disable_warnings(category=InsecureRequestWarning)\n",
     "\n",
     "# Setup connection to Flowable API\n",
     "flowable_base_url = \"https://registration-harvester-api.develop.eoepca.org/flowable-rest\"\n",
     "flowable_rest_user = \"eoepca\"\n",
     "flowable_rest_pw = \"eoepca\"\n",
+    "\n",
     "flowable_session = Session()\n",
+    "flowable_session.verify = False\n",
     "flowable_session.auth = HTTPBasicAuth(flowable_rest_user, flowable_rest_pw)"
    ]
   },
@@ -56,19 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6a974144",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GET https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/repository/deployments\n",
-      "No workflows deployed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = f\"{flowable_base_url}/service/repository/deployments\"\n",
     "print(f\"GET {url}\")\n",
@@ -141,18 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6c0d6334",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sucessfully deployed workflow: https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/repository/deployments/eeb593c7-3f86-11f0-bbce-f2cc86e9cfcb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bpmn = \"https://raw.githubusercontent.com/EOEPCA/registration-harvester/refs/heads/main/workflows//stac-publish.bpmn\"\n",
     "bpmn_file = {os.path.basename(bpmn): requests.get(bpmn).text}\n",
@@ -192,19 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1235f850",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GET https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/repository/process-definitions\n",
-      "1  STAC Publish                 version: 1     id: stacPublish:1:ef67ccca-3f86-11f0-bbce-f2cc86e9cfcb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = f\"{flowable_base_url}/service/repository/process-definitions\"\n",
     "print(f\"GET {url}\")\n",
@@ -234,19 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0c7569d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GET https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/runtime/process-instances\n",
-      "No running workflows\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = f\"{flowable_base_url}/service/runtime/process-instances\"\n",
     "print(f\"GET {url}\")\n",
@@ -399,9 +370,9 @@
    "id": "86a21446",
    "metadata": {},
    "source": [
-    "### Execute workflow to harvest static STAC catalog\n",
+    "### Execute workflow to harvest metadata from STAC API\n",
     "\n",
-    "This workflow is able to harvest a static STAC catalog represented by a set of JSON files.\n",
+    "This workflow is able to harvest a dynamic catalog from representend by a STAC API.\n",
     "\n",
     "![Sentinel Workflow](img/stac-publish.png)"
    ]
@@ -411,65 +382,37 @@
    "id": "933c7c95",
    "metadata": {},
    "source": [
-    "The path to the file which represents the catalog must be provided as input parameter when starting the workflow."
+    "The URL to the STAC API catalog must be provided as input parameter when starting the workflow. It is also recommended, to explicitly specify the collections to be harvested as comma separated list. Otherwise all collections in this catalog will be harvested."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "84d1fdab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\n",
-      "    {\n",
-      "        \"name\": \"stac_catalog_source\",\n",
-      "        \"value\": \"https://raw.githubusercontent.com/stac-utils/pystac/main/docs/example-catalog/catalog.json\"\n",
-      "    }\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "variables = [\n",
     "    {\n",
     "        \"name\": \"stac_catalog_source\",\n",
-    "        \"value\": \"https://raw.githubusercontent.com/stac-utils/pystac/main/docs/example-catalog/catalog.json\"\n",
+    "        # EOPF Sample Service STAC API\n",
+    "        \"value\": \"https://stac.core.eopf.eodc.eu\"\n",
     "    },\n",
-    "    #{\n",
-    "    #    \"name\": \"s3_endpoint_url\",\n",
-    "    #    \"value\": \"http://localhost:9000\"\n",
-    "    #},\n",
-    "    #{\n",
-    "    #    \"name\": \"s3_access_key\",\n",
-    "    #    \"value\": \"minioadmin\"\n",
-    "    #},\n",
-    "    #{\n",
-    "    #    \"name\": \"s3_secret_key\",\n",
-    "    #    \"value\": \"minioadmin\"\n",
-    "    #}\n",
+    "    {\n",
+    "        \"name\": \"stac_catalog_collections\",\n",
+    "        # Collection for Sentinel-1 SLC contains only few items since not converted continuously at the moment\n",
+    "        \"value\": \"sentinel-1-l1-slc\"\n",
+    "    }\n",
     "]\n",
     "print(json.dumps(variables, indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1134092b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "201\n",
-      "Created process instance at https://registration-harvester-api.develop.eoepca.org/flowable-rest/service/runtime/process-instances/7d7c7a2c-3f92-11f0-bbce-f2cc86e9cfcb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create HTTP request to start the workflow\n",
     "body = {}\n",
