feat(e2e): fix stac urls and openeo version.

--- a/demoroot/notebooks/08-1 E2E External Data Registration CF.ipynb
+++ b/demoroot/notebooks/08-1 E2E External Data Registration CF.ipynb
@@ -59,7 +59,7 @@
    "id": "9410ff17-b1dd-454e-858b-41944860ca3c",
    "metadata": {},
    "source": [
-    "micromamba create -n eoepca_end2end -c conda-forge pystac pystac-client odc odc-stac openeo xarray rioxarray rasterio geopandas pyproj numpy folium shapely pyjwt certifi boto3 python-dotenv pip jupyterlab"
+    "micromamba create -n eoepca_end2end -c conda-forge pystac>1.12.1 pystac-client odc odc-stac openeo>=0.46.0 xarray rioxarray rasterio geopandas pyproj numpy folium shapely pyjwt certifi boto3 python-dotenv pip jupyterlab"
    ]
   },
   {
