Update Harvester notebook

--- a/demoroot/notebooks/06 Resource Registration Harvester.ipynb
+++ b/demoroot/notebooks/06 Resource Registration Harvester.ipynb
@@ -395,13 +395,19 @@
     "variables = [\n",
     "    {\n",
     "        \"name\": \"stac_catalog_source\",\n",
-    "        # EOPF Sample Service STAC API\n",
-    "        \"value\": \"https://stac.core.eopf.eodc.eu\"\n",
+    "        \"value\": \"https://stac.dataspace.copernicus.eu/v1/\"\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"stac_catalog_collections\",\n",
-    "        # Collection for Sentinel-1 SLC contains only few items since not converted continuously at the moment\n",
-    "        \"value\": \"sentinel-1-l1-slc\"\n",
+    "        \"value\": \"sentinel-2-l2a\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"datetime\",\n",
+    "        \"value\": \"2025-06-02T00:00:00/2025-06-05T00:00:00\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"bbox\",\n",
+    "        \"value\": \"7.76,36.39,18.69,43.69\" # Italy\n",
     "    }\n",
     "]\n",
     "print(json.dumps(variables, indent=4))"
